--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@600&family=Lato:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Desafio 02 - #boraCodar</title>
   </head>
   <body>
-    <div class="sofa-div">
-      <img class="spin-image" src="/assets/vector.png" alt="Ícone de 360 graus">
-      <img class="sofa-image" src="/assets/image2.png" alt="Sofá">
-    </div>
-    <div class="item-div">
-      <div class="information-div">
-        <p class="item-code">CÓDIGO: 42404</p>
-        <h1 class="item-name">Sofá Margot II - Rosé</h1>
-        <p class="item-price">R$ 4.000</p>
+    <main>
+      <div class="sofa-div">
+        <button class="btn-spin" onclick="toggle()">
+          <img
+            src="/assets/360.svg"
+            alt="icone para rotacionar o sofa em 360 graus"
+          />
+        </button>
+        <button class="btn-close" onclick="toggle()">
+          <img src="/assets/close.svg" alt="icone de parar a rotacao do sofa" />
+        </button>
+        <img class="static-sofa" src="/assets/sofa.png" alt="sofa" />
+        <img class="animated-sofa" src="/assets/sofa.gif" alt="sofa" />
       </div>
-      <button type="button" class="add-to-cart-button">Adicionar à cesta</button>
-    </div>
+      <div class="item-div">
+        <div class="details-div">
+          <h4>CÓDIGO: 42404</h4>
+          <h1>Sofá Margot II - Rosé</h1>
+          <p>R$ 4.000</p>
+          <button type="button">Adicionar à cesta</button>
+        </div>
+      </div>
+    </main>
 
     <script src="index.js"></script>
   </body>
